kubernetes-labs/lab-31-istio-rate-limiting/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-31-ratelimit
  labels:
    istio-injection: enabled
